add compilation and credits to README